--- a/.github/workflows/daily_video.yml
+++ b/.github/workflows/daily_video.yml
@@ -1,61 +1,54 @@
 name: Daily Medusa Video
 
-# Run every day at 2 PM Nigeria time (UTC+1)
 on:
   schedule:
-    - cron: "0 13 * * *" # 13:00 UTC = 14:00 Nigeria
-  workflow_dispatch: # allows manual run
+    - cron: '0 14 * * *' # 2 PM Nigeria time
+  workflow_dispatch:
 
 jobs:
-  build-and-upload:
+  build-upload:
     runs-on: ubuntu-latest
-    env:
-      HUGGINGFACE_TOKEN: ${{ secrets.HUGGINGFACE_TOKEN }}
-      YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
-      DRIVE_API_KEY: ${{ secrets.DRIVE_API_KEY }}
+
     steps:
-      # 1. Checkout repo
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      # 2. Setup Python
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
 
-      # 3. Cache pip packages
-      - name: Cache Python packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install gTTS moviepy pillow requests huggingface-hub
 
-      # 4. Install dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Generate Story
+      run: python story_generator.py
 
-      # 5. Run Python scripts sequentially
-      - name: Generate Story
-        run: python story_generator.py
+    - name: Generate Images
+      env:
+        HF_API_KEY: ${{ secrets.HF_API_KEY }}
+      run: python image_generator.py
 
-      - name: Generate Images
-        run: python image_generator.py
+    - name: Generate TTS
+      run: python tts_generator.py
 
-      - name: Generate TTS Audio
-        run: python tts_generator.py
+    - name: Build Video
+      run: python video_builder.py
 
-      - name: Build Video
-        run: python video_builder.py
+    - name: Upload to Google Drive
+      uses: gdrive-upload-action@v1
+      with:
+        service_account_json: ${{ secrets.GDRIVE_SERVICE_JSON }}
+        source: "daily_video.mp4"
+        destination: "MedusaDaily/"
 
-      # 6. Upload to Google Drive
-      - name: Upload to Drive
-        run: python upload_to_drive.py
-
-      # 7. Upload to YouTube
-      - name: Upload to YouTube
-        run: python upload_to_youtube.py
+    - name: Upload to YouTube
+      uses: googleapis/github-actions-youtube@v1
+      with:
+        api_key: ${{ secrets.YOUTUBE_API_KEY }}
+        video_file: "daily_video.mp4"
+        title: "Daily Medusa Cinematic Story"
+        description: "Watch Medusa's 30-minute cinematic adventure. #Medusa #Fantasy #Cinematic"
+        tags: "Medusa,Fantasy,Adventure,Cinematic,AI Video"
+        privacy_status: "public"
