--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
+# Video creation
 moviepy==2.0.0
-gtts==2.3.2
-requests==2.32.5
+
+# Text-to-speech
+gTTS==2.3.1
+pyttsx3==2.90  # optional alternative TTS engine
+
+# Image handling
 Pillow==11.3.0
+requests==2.32.5
 huggingface-hub==0.36.0
+
+# YouTube upload
+google-api-python-client==2.100.0
+google-auth==2.24.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+
+# Data handling
+json5==0.9.14  # optional for more flexible JSON handling
