--- a/.github/workflows/daily_video.yml
+++ b/.github/workflows/daily_video.yml
@@ -1,52 +1,54 @@
-name: Daily Video Automation
+name: Daily Medusa Video
 
+# Runs every day at 2 PM Nigeria time
 on:
   schedule:
-    # Runs at 2 PM Nigeria time (UTC+1 => 13:00 UTC)
-    - cron: '0 13 * * *'
-  workflow_dispatch:  # Allows manual trigger
+    - cron: "0 13 * * *"  # GitHub cron uses UTC, Nigeria is UTC+1
+  workflow_dispatch:
 
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
+    env:
+      HUGGINGFACE_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
+      DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
+      YT_API_KEY: ${{ secrets.YT_API_KEY }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Generate Story
+      - name: Generate story
         run: python story_generator.py
 
-      - name: Generate Images
-        env:
-          HF_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
+      - name: Generate images
         run: python image_generator.py
 
-      - name: Generate Voiceover
+      - name: Generate TTS audio
         run: python tts_generator.py
 
-      - name: Build Video
+      - name: Build video
         run: python video_builder.py
 
-      - name: Generate Thumbnail
+      - name: Generate thumbnail
         run: python thumbnail_generator.py
 
       - name: Upload to Google Drive
-        env:
-          GDRIVE_SERVICE_JSON: ${{ secrets.DRIVE_CREDENTIALS }}
         run: python drive_upload.py
+        env:
+          DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
 
       - name: Upload to YouTube
+        run: python youtube_upload.py
         env:
           YT_API_KEY: ${{ secrets.YT_API_KEY }}
-        run: python youtube_upload.py
