--- a/.github/workflows/daily_video.yml
+++ b/.github/workflows/daily_video.yml
@@ -1,54 +1,51 @@
 name: Daily Medusa Video
 
-# Runs every day at 2 PM Nigeria time
 on:
   schedule:
-    - cron: "0 13 * * *"  # GitHub cron uses UTC, Nigeria is UTC+1
-  workflow_dispatch:
+    - cron: "0 14 * * *"  # Runs daily at 2 PM Nigeria time (UTC+1 adjust if needed)
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
-    env:
-      HUGGINGFACE_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
-      DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
-      YT_API_KEY: ${{ secrets.YT_API_KEY }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Generate story
-        run: python story_generator.py
+    - name: Generate Story
+      run: python story_generator.py
 
-      - name: Generate images
-        run: python image_generator.py
+    - name: Generate Images
+      env:
+        HUGGINGFACE_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
+      run: python image_generator.py
 
-      - name: Generate TTS audio
-        run: python tts_generator.py
+    - name: Generate TTS Audio
+      run: python tts_generator.py
 
-      - name: Build video
-        run: python video_builder.py
+    - name: Build Video
+      run: python video_builder.py
 
-      - name: Generate thumbnail
-        run: python thumbnail_generator.py
+    - name: Generate Thumbnail
+      run: python thumbnail_generator.py
 
-      - name: Upload to Google Drive
-        run: python drive_upload.py
-        env:
-          DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
+    - name: Upload to Google Drive
+      env:
+        DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
+      run: python drive_upload.py
 
-      - name: Upload to YouTube
-        run: python youtube_upload.py
-        env:
-          YT_API_KEY: ${{ secrets.YT_API_KEY }}
+    - name: Upload to YouTube
+      env:
+        YOUTUBE_API_KEY: ${{ secrets.YT_API_KEY }}
+      run: python youtube_upload.py
