--- a/.github/workflows/daily_video.yml
+++ b/.github/workflows/daily_video.yml
@@ -2,7 +2,7 @@ name: Daily Medusa Video
 
 on:
   schedule:
-    # Runs at 2 PM Nigeria time daily (UTC+1 = 13:00 UTC)
+    # Runs every day at 2 PM Nigeria Time (UTC+1 → 13:00 UTC)
     - cron: '0 13 * * *'
   workflow_dispatch: # allows manual trigger
 
@@ -11,50 +11,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+    - name: Install system dependencies (FFmpeg)
+      run: sudo apt-get update && sudo apt-get install -y ffmpeg
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Generate story
-        run: python story_generator.py
+    - name: Generate story
+      env:
+        HF_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
+      run: python story_generator.py
 
-      - name: Generate images
-        env:
-          HUGGINGFACE_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
-        run: python image_generator.py
+    - name: Generate images
+      env:
+        HF_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
+      run: python image_generator.py
 
-      - name: Generate TTS audio
-        run: python tts_generator.py
+    - name: Generate TTS
+      run: python tts_generator.py
 
-      - name: Build video
-        run: python video_builder.py
+    - name: Build video
+      run: python video_builder.py
 
-      - name: Generate thumbnail
-        run: python thumbnail_generator.py
+    - name: Generate thumbnail
+      run: python thumbnail_generator.py
 
-      - name: Upload to Google Drive
-        env:
-          DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
-        run: python drive_upload.py
+    - name: Upload to Google Drive
+      env:
+        DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
+      run: python drive_upload.py
 
-      - name: Upload to YouTube
-        env:
-          YT_API_KEY: ${{ secrets.YT_API_KEY }}
-        run: python youtube_upload.py
+    - name: Upload to YouTube
+      env:
+        YT_API_KEY: ${{ secrets.YT_API_KEY }}
+      run: python youtube_upload.py
