--- a/.github/workflows/daily_video.yml
+++ b/.github/workflows/daily_video.yml
@@ -8,36 +8,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install moviepy gTTS requests Pillow huggingface-hub google-api-python-client
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
 
-    - name: Run Story Generator
-      run: python story_generator.py
+      - name: Verify secrets
+        run: |
+          echo "Hugging Face Key: ${{ secrets.HUGGINGFACE_API_KEY }}"
+          echo "Drive Credentials: ${{ secrets.DRIVE_CREDENTIALS != '' }}"
+          echo "YouTube API Key: ${{ secrets.YT_API_KEY != '' }}"
 
-    - name: Run Image Generator
-      env:
-        HF_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
-      run: python image_generator.py
+      - name: Generate Images from Story
+        run: python image_generator.py
+        env:
+          HF_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
 
-    - name: Run TTS Generator
-      run: python tts_generator.py
+      - name: Build Video
+        run: python video_builder.py
 
-    - name: Build Video (FFmpeg)
-      run: python video_builder.py
-
-    - name: Upload to YouTube
-      env:
-        YT_API_KEY: ${{ secrets.YT_API_KEY }}
-      run: python youtube_upload.py
+      - name: Upload to YouTube
+        run: python youtube_upload.py
+        env:
+          YT_API_KEY: ${{ secrets.YT_API_KEY }}
+          DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
