--- a/.github/workflows/daily_video.yml
+++ b/.github/workflows/daily_video.yml
@@ -1,4 +1,4 @@
-name: Daily Video Workflow
+name: Medusa Daily Video
 
 on:
   workflow_dispatch:
@@ -6,14 +6,8 @@ on:
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
-    env:
-      HF_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
-      DRIVE_CREDENTIALS: ${{ secrets.DRIVE_CREDENTIALS }}
-      YT_API_KEY: ${{ secrets.YT_API_KEY }}
-      DRIVE_FOLDER_ID: "YOUR_DRIVE_FOLDER_ID"  # Replace with your Drive folder ID
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -22,66 +16,21 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg
+          pip install --upgrade pip
+          pip install Pillow gTTS requests ffmpeg-python
 
-      - name: Generate daily story
+      - name: Generate Daily Story
         run: python story_generator.py
 
-      - name: Generate images
+      - name: Generate Images
         run: python image_generator.py
 
-      - name: Build video
+      - name: Generate TTS Audio
+        run: python tts_generator.py
+
+      - name: Build Video
         run: python video_builder.py
 
-      - name: Upload video to Google Drive
-        run: |
-          python <<'EOF'
-          import os
-          import json
-          from google.oauth2 import service_account
-          from googleapiclient.discovery import build
-          from googleapiclient.http import MediaFileUpload
-
-          creds_json = os.environ['DRIVE_CREDENTIALS']
-          folder_id = os.environ['DRIVE_FOLDER_ID']
-          creds_dict = json.loads(creds_json)
-          creds = service_account.Credentials.from_service_account_info(creds_dict)
-          drive_service = build('drive', 'v3', credentials=creds)
-
-          file_metadata = {'name': 'daily_video.mp4', 'parents':[folder_id]}
-          media = MediaFileUpload('daily_video.mp4', mimetype='video/mp4')
-          file = drive_service.files().create(body=file_metadata, media_body=media, fields='id').execute()
-          print(f"Uploaded to Drive: {file.get('id')}")
-          EOF
-
-      - name: Upload video to YouTube
-        run: |
-          python <<'EOF'
-          import os
-          import json
-          from googleapiclient.discovery import build
-          from googleapiclient.errors import HttpError
-
-          api_key = os.environ['YT_API_KEY']
-          youtube = build('youtube', 'v3', developerKey=api_key)
-
-          request = youtube.videos().insert(
-              part="snippet,status",
-              body={
-                  "snippet": {
-                      "title": "Daily Cinematic Video",
-                      "description": "Automatically generated daily video.",
-                      "tags": ["daily video", "cinematic", "AI generated"]
-                  },
-                  "status": {
-                      "privacyStatus": "public"
-                  }
-              },
-              media_body='daily_video.mp4'
-          )
-          response = request.execute()
-          print(f"Uploaded to YouTube: {response.get('id')}")
-          EOF
+      # Optional: Upload to Google Drive (requires DRIVE_CREDENTIALS secret)
+      # - name: Upload to Drive
+      #   run: python drive_upload.py
